docker-registry/kustomize/registry/ingress.yaml
# ingress for docker repo
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry-service
  namespace: docker
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
spec:
  rules:
  - host: az.docker.juxtagene.com
    http:
      paths:
      - backend:
          serviceName: docker-registry-service
          servicePort: 5000
        path: /
  tls:
  - hosts:
    - az.docker.juxtagene.com
    secretName: docker-juxtagene-com-tls
